2003-11-17  Kenichi Handa  <handa@m17n.org>

	* mm-util.el (mm-enable-multibyte): Call set-buffer-multibyte
	with the arg `to'.

2003-11-13  Kenichi Handa  <handa@m17n.org>

	* rfc2104.el (rfc2104-hexstring-to-byte-list): Renamed from
	rfc2104-hexstring-to-bitstring and changed to return a byte list.
	(rfc2104-hash): Convert the result of concat to unibyte string.

2002-10-16  Dave Love  <fx@gnu.org>

	* mm-bodies.el (mm-encode-body): Doc fix.

	* qp.el (quoted-printable-encode-region): Fix non-Emacs 22 case.

2002-10-09  Dave Love  <fx@gnu.org>

	* qp.el (quoted-printable-encode-region): Fix non-multibyte search
	for Emacs 22.

2002-10-07  Dave Love  <fx@gnu.org>

	* qp.el (quoted-printable-encode-region): Go to start of range
	before searching.
	(quoted-printable-encode-region): Use multibyte-char-to-unibyte.

2002-09-05  Dave Love  <fx@gnu.org>

	* qp.el (quoted-printable-decode-region): Use mm-insert-byte.

	* mm-util.el (mm-hack-charsets, mm-iso-8859-15-compatible) 
	(mm-iso-8859-x-to-15-table, mm-iso-8859-x-to-15-region): Deleted.
	(mm-find-mime-charset-region): Remove hack-charsets stuff.
	(mm-insert-byte): New.

	* rfc2047.el (message-posting-charset): defvar when compiling.
	(rfc2047-header-encoding-alist): Add `address-mime' part.
	(rfc2047-charset-encoding-alist): Use B for iso-8859-7.  Doc fix.
	(rfc2047-q-encoding-alist): Augment header list.
	(rfc2047-encodable-p): Use mm-find-mime-charset-region.
	(rfc2047-special-chars, rfc2047-non-special-chars): New.
	(rfc2047-dissect-region, rfc2047-encode-region, rfc2047-encode):
	Rewritten to avoid charset stuff and to take account of rfc2822
	tokens.
	(rfc2047-encode-message-header): Don't include header name field
	in encoding.  Add `address-mime' case and bind
	rfc2047-special-chars for `mime' case.

2002-08-21  Kenichi Handa  <handa@etl.go.jp>

	* qp.el (quoted-printable-decode-region): Insert bytes by
	`insert-byte'.

2002-08-18  Dave Love  <fx@gnu.org>

	* rfc2047.el (rfc2047-encode): Fix last change.
