@@ -1,6 +1,6 @@
 ;;; mm-bodies.el --- Functions for decoding MIME things
 
-;; Copyright (C) 1998, 1999, 2000, 2001, 2003
+;; Copyright (C) 1998, 1999, 2000, 2001, 2003, 2004
 ;;        Free Software Foundation, Inc.
 
 ;; Author: Lars Magne Ingebrigtsen <larsi@gnus.org>
@@ -91,8 +91,7 @@ If no encoding was done, nil is returned."
 	    (mm-encode-coding-region (point-min) (point-max) charset)
 	    charset)
 	(goto-char (point-min))
-	(let ((charsets (mm-find-mime-charset-region (point-min) (point-max)
-						     mm-hack-charsets)))
+	(let ((charsets (mm-find-mime-charset-region (point-min) (point-max))))
 	  (cond
 	   ;; No encoding.
 	   ((null charsets)
